// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Methods Information should return methods information of John Doe 1`] = `
<section
  className="sc-bXexck jEqyfB"
>
  <h2
    className="sc-cBoqAE"
  >
    Mes méthodes pour projet réussi
  </h2>
  <article
    className="sc-eCApnc"
  >
    <h3
      className="sc-ciSkZP"
    >
      Title 1
    </h3>
    <p
      className="sc-eKYRIR"
    >
      description 1
    </p>
  </article>
  <article
    className="sc-eCApnc"
  >
    <h3
      className="sc-ciSkZP"
    >
      Title 2
    </h3>
    <p
      className="sc-eKYRIR"
    >
      description 2
    </p>
  </article>
</section>
`;

exports[`Methods Information should return methods information of Paul Couthouis 1`] = `
<section
  className="sc-bXexck jEqyfB"
>
  <h2
    className="sc-cBoqAE"
  >
    Mes méthodes pour projet réussi
  </h2>
  <article
    className="sc-eCApnc"
  >
    <h3
      className="sc-ciSkZP"
    >
      Test-Driven Development
    </h3>
    <p
      className="sc-eKYRIR"
    >
      Le TDD c'est la meilleur manière de produire du code sans dette, sans bug, avec un design optimisé, une couverture de test complète
    </p>
  </article>
  <article
    className="sc-eCApnc"
  >
    <h3
      className="sc-ciSkZP"
    >
      Hexagonal Architecture
    </h3>
    <p
      className="sc-eKYRIR"
    >
      Pour un produit très peu dépendant des choix techniques, l'Hexagonal Architecture permet d'isoler le code métier, soit le coeur de votre application. C'est la garantie de faire évoluer votre produit dans le temps.
    </p>
  </article>
  <article
    className="sc-eCApnc"
  >
    <h3
      className="sc-ciSkZP"
    >
      Design Fonctionnel
    </h3>
    <p
      className="sc-eKYRIR"
    >
      Un développeur n'est pas seulement un codeur. Ensemble, conceptualisons la meilleur application en fonction des besoins réels du client
    </p>
  </article>
  <article
    className="sc-eCApnc"
  >
    <h3
      className="sc-ciSkZP"
    >
      Intégration continue
    </h3>
    <p
      className="sc-eKYRIR"
    >
      Un des grands principes de l'agilité, livrons notre application par petit bout de fonctionnalité et ainsi lui donner de la valeur.
    </p>
  </article>
</section>
`;
